Spacing fix for main page when page at 1175px

--- a/src/components/main/Character.less
+++ b/src/components/main/Character.less
@@ -37,12 +37,15 @@
 }
 
 @media all and (max-width: 1175px) {
-  .Character {
+  .Character__name {
+    margin: 20px 20px 0;
   }
 
   .Character--bottom {
     display: flex;
     flex-direction: column;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 
   #characterLevel {
