--- a/src/components/main/Combat.less
+++ b/src/components/main/Combat.less
@@ -155,3 +155,10 @@
 .Combat__tempHitPoints {
   border: 1px solid black;
 }
+
+@media all and (max-width: 1175px) {
+  .Combat {
+    margin-top: 0;
+    margin-left: 20px;
+  }
+}
