--- a/src/components/main/Main.less
+++ b/src/components/main/Main.less
@@ -27,7 +27,9 @@
 
   .Main__details {
     order: 2;
-    display: grid;
     grid-template-columns: 1fr 3fr;
+
+    // hack fix
+    height: 1%;
   }
 }
